Added dstb bootstrap

--- a/neo4j/Vagrantfile
+++ b/neo4j/Vagrantfile
@@ -17,6 +17,6 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # config.vm.synced_folder "../data", "/vagrant_data"
 
   # Setup system using bootstrap.sh, as found in the same folder as the Vagrantfile.
-  config.vm.provision "shell", path: "bootstrap.sh"
+  # config.vm.provision "shell", path: "bootstrap.sh"
 
 end
